// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityTable DOM should render correctly 1`] = `
<Modal
  actions={Array []}
  appendTo={<body />}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__table--remove"
  hasNoBodyWrapper={false}
  isOpen={false}
  onClose={[Function]}
  showClose={true}
  title="Remove from inventory"
  variant="small"
>
  <Component
    hasGutter={true}
  >
    <Component>
      <ExclamationTriangleIcon
        className="ins-m-alert"
        color="currentColor"
        noVerticalAlign={false}
        size="xl"
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Component
        hasGutter={true}
      >
        <Component>
           will be removed from all 
          localhost:5000
           applications and services. You need to re-register the 
          system
           to add it back to your inventory.
        </Component>
        <Component>
          To disable the daily upload for this 
          system
          , use the following command:
        </Component>
        <Component>
          <ClipboardCopy
            clickTip="Successfully copied to clipboard!"
            entryDelay={100}
            exitDelay={1600}
            hoverTip="Copy to clipboard"
            isCode={false}
            isExpanded={false}
            isReadOnly={false}
            maxWidth="150px"
            onChange={[Function]}
            onCopy={[Function]}
            position="top"
            switchDelay={2000}
            textAriaLabel="Copyable input"
            toggleAriaLabel="Show content"
            variant="inline"
          >
            insights-client --unregister
          </ClipboardCopy>
        </Component>
      </Component>
    </Component>
  </Component>
  <Component
    hasGutter={true}
  >
    <Component>
      <Component
        onClick={[Function]}
        variant="danger"
      >
        Remove
      </Component>
      <Component
        onClick={[Function]}
        variant="link"
      >
        Cancel
      </Component>
    </Component>
  </Component>
</Modal>
`;

exports[`EntityTable DOM should render correctly with multiple systems - count 1 1`] = `
<Modal
  actions={Array []}
  appendTo={<body />}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__table--remove"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  showClose={true}
  title="Remove from inventory"
  variant="small"
>
  <Component
    hasGutter={true}
  >
    <Component>
      <ExclamationTriangleIcon
        className="ins-m-alert"
        color="currentColor"
        noVerticalAlign={false}
        size="xl"
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Component
        hasGutter={true}
      >
        <Component>
          something
           will be removed from all 
          localhost:5000
           applications and services. You need to re-register the 
          system
           to add it back to your inventory.
        </Component>
        <Component>
          To disable the daily upload for this 
          system
          , use the following command:
        </Component>
        <Component>
          <ClipboardCopy
            clickTip="Successfully copied to clipboard!"
            entryDelay={100}
            exitDelay={1600}
            hoverTip="Copy to clipboard"
            isCode={false}
            isExpanded={false}
            isReadOnly={false}
            maxWidth="150px"
            onChange={[Function]}
            onCopy={[Function]}
            position="top"
            switchDelay={2000}
            textAriaLabel="Copyable input"
            toggleAriaLabel="Show content"
            variant="inline"
          >
            insights-client --unregister
          </ClipboardCopy>
        </Component>
      </Component>
    </Component>
  </Component>
  <Component
    hasGutter={true}
  >
    <Component>
      <Component
        onClick={[Function]}
        variant="danger"
      >
        Remove
      </Component>
      <Component
        onClick={[Function]}
        variant="link"
      >
        Cancel
      </Component>
    </Component>
  </Component>
</Modal>
`;

exports[`EntityTable DOM should render correctly with multiple systems - count 2 1`] = `
<Modal
  actions={Array []}
  appendTo={<body />}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__table--remove"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  showClose={true}
  title="Remove from inventory"
  variant="small"
>
  <Component
    hasGutter={true}
  >
    <Component>
      <ExclamationTriangleIcon
        className="ins-m-alert"
        color="currentColor"
        noVerticalAlign={false}
        size="xl"
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Component
        hasGutter={true}
      >
        <Component>
          2 systems
           will be removed from all 
          localhost:5000
           applications and services. You need to re-register the 
          systems
           to add it back to your inventory.
        </Component>
        <Component>
          To disable the daily upload for this 
          systems
          , use the following command:
        </Component>
        <Component>
          <ClipboardCopy
            clickTip="Successfully copied to clipboard!"
            entryDelay={100}
            exitDelay={1600}
            hoverTip="Copy to clipboard"
            isCode={false}
            isExpanded={false}
            isReadOnly={false}
            maxWidth="150px"
            onChange={[Function]}
            onCopy={[Function]}
            position="top"
            switchDelay={2000}
            textAriaLabel="Copyable input"
            toggleAriaLabel="Show content"
            variant="inline"
          >
            insights-client --unregister
          </ClipboardCopy>
        </Component>
      </Component>
    </Component>
  </Component>
  <Component
    hasGutter={true}
  >
    <Component>
      <Component
        onClick={[Function]}
        variant="danger"
      >
        Remove
      </Component>
      <Component
        onClick={[Function]}
        variant="link"
      >
        Cancel
      </Component>
    </Component>
  </Component>
</Modal>
`;

exports[`EntityTable DOM should render correctly with one system 1`] = `
<Modal
  actions={Array []}
  appendTo={<body />}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__table--remove"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  showClose={true}
  title="Remove from inventory"
  variant="small"
>
  <Component
    hasGutter={true}
  >
    <Component>
      <ExclamationTriangleIcon
        className="ins-m-alert"
        color="currentColor"
        noVerticalAlign={false}
        size="xl"
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Component
        hasGutter={true}
      >
        <Component>
          something
           will be removed from all 
          localhost:5000
           applications and services. You need to re-register the 
          system
           to add it back to your inventory.
        </Component>
        <Component>
          To disable the daily upload for this 
          system
          , use the following command:
        </Component>
        <Component>
          <ClipboardCopy
            clickTip="Successfully copied to clipboard!"
            entryDelay={100}
            exitDelay={1600}
            hoverTip="Copy to clipboard"
            isCode={false}
            isExpanded={false}
            isReadOnly={false}
            maxWidth="150px"
            onChange={[Function]}
            onCopy={[Function]}
            position="top"
            switchDelay={2000}
            textAriaLabel="Copyable input"
            toggleAriaLabel="Show content"
            variant="inline"
          >
            insights-client --unregister
          </ClipboardCopy>
        </Component>
      </Component>
    </Component>
  </Component>
  <Component
    hasGutter={true}
  >
    <Component>
      <Component
        onClick={[Function]}
        variant="danger"
      >
        Remove
      </Component>
      <Component
        onClick={[Function]}
        variant="link"
      >
        Cancel
      </Component>
    </Component>
  </Component>
</Modal>
`;

exports[`EntityTable DOM should render correctly with one system 2`] = `
<Modal
  actions={Array []}
  appendTo={<body />}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className="ins-c-inventory__table--remove"
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  showClose={true}
  title="Remove from inventory"
  variant="small"
>
  <Component
    hasGutter={true}
  >
    <Component>
      <ExclamationTriangleIcon
        className="ins-m-alert"
        color="currentColor"
        noVerticalAlign={false}
        size="xl"
      />
    </Component>
    <Component
      isFilled={true}
    >
      <Component
        hasGutter={true}
      >
        <Component>
          something
           will be removed from all 
          localhost:5000
           applications and services. You need to re-register the 
          system
           to add it back to your inventory.
        </Component>
        <Component>
          To disable the daily upload for this 
          system
          , use the following command:
        </Component>
        <Component>
          <ClipboardCopy
            clickTip="Successfully copied to clipboard!"
            entryDelay={100}
            exitDelay={1600}
            hoverTip="Copy to clipboard"
            isCode={false}
            isExpanded={false}
            isReadOnly={false}
            maxWidth="150px"
            onChange={[Function]}
            onCopy={[Function]}
            position="top"
            switchDelay={2000}
            textAriaLabel="Copyable input"
            toggleAriaLabel="Show content"
            variant="inline"
          >
            insights-client --unregister
          </ClipboardCopy>
        </Component>
      </Component>
    </Component>
  </Component>
  <Component
    hasGutter={true}
  >
    <Component>
      <Component
        onClick={[Function]}
        variant="danger"
      >
        Remove
      </Component>
      <Component
        onClick={[Function]}
        variant="link"
      >
        Cancel
      </Component>
    </Component>
  </Component>
</Modal>
`;
